refactor - use account number as id for accounts
